--- a/backend/package.json
+++ b/backend/package.json
@@ -2,9 +2,11 @@
   "type": "module",
   "name": "backend",
   "version": "1.0.0",
-  "main": "src/index.js",
+  "main": "src/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "electron .",
+    "postinstall": "electron-builder install-app-deps"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +19,8 @@
     "ws": "^8.18.1"
   },
   "devDependencies": {
-    "@types/ws": "^8.18.1"
+    "@electron/rebuild": "^3.7.2",
+    "@types/ws": "^8.18.1",
+    "electron": "^35.2.1"
   }
 }
